# Nest

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md  build-app-debug.bat  build-app-release.bat  build-lib-debug.bat  build-lib-release.bat  build-test.bat  clang-generate-cmake-cache.bat  conanfile.txt  generate-cmake-cache.bat  meson.build  meson_options.txt  remove-cache.bat
.github/workflows/: app.yml  benchmarks.yml  docs.yml  install.yml  macos.yml  standalone.yml  tests.yml  ubuntu.yml  windows.yml
app/: Bootstrap.cxx  CMakeLists.txt  meson.build
app/include/: meson.build
app/src/: main.cxx  meson.build
benchmark/: meson.build
benchmark/src/: meson.build
benchmark/src/Nest/Foo/: FooBenchmark.cxx  meson.build
cmake/: sanitizers.cmake  tools.cmake
docs/: Doxyfile.in  meson.build
docs/pages/: about.dox
documentation/: CMakeLists.txt
examples/: meson.build
examples/foo/: Main.cxx  meson.build
include/: Export.hxx.in  Version.hxx.in  meson.build
include/Nest/: Export.hxx.in  Foo.hxx  meson.build
include/Nest/Core/Communication/: Channel.hxx  Oneshot.hxx  OneshotChannel.hxx  Receiver.hxx  Transmitter.hxx  Tunnel.hxx
include/Nest/Core/Communication/Concepts/: Channel.hxx  Receiver.hxx  Transmitter.hxx
include/Nest/Core/Concurrency/: Scheduler.hxx  Task.hxx  ThreadPool.hxx
include/Nest/Core/Containers/: CircularBuffer.hxx  ConcurrentQueue.hxx  Field.hxx  PriorityQueue.hxx  Storage.hxx  Vector.hxx
include/Nest/Core/Containers/Detail/: ConcurrentQueueImpl.hxx
include/Nest/Core/Utility/: Assert.hxx  Atomic.hxx  CommonTypes.hxx  Optional.hxx
include/Nest/Core/Utility/Concepts/: Common.hxx  Trivial.hxx
include/Nest/Core/Utility/Traits/: NonCopyable.hxx  NonMovable.hxx
src/: Foo.cxx  meson.build
test/: Bootstrap.cxx  CMakeLists.txt  meson.build
test/src/: OneshotTests.cxx  ReceiverTests.cxx  TransmitterTests.cxx  TunnelTests.cxx  greeter.cxx  meson.build
test/src/Nest/Foo/: Foo.cxx  meson.build
