# option('run-examples',
#   type: 'boolean',
#   value: false,
#   description 'Runs the examples.'
# )

option('build-app',
  type: 'boolean',
  value: false,
  description: 'Builds the application.'
)

option('enable-tests',
  type: 'boolean',
  value: true,
  description: 'Enables tests.'
)

option('enable-benchmark',
  type: 'boolean',
  value: false,
  description: 'Enables benchmarking.'
)